# optimage

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: image.cpp  image.hpp  load_save_image.cpp  load_save_image.hpp
src/filters/: blur.cpp  blur.hpp  color.cpp  color.hpp
